--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,1 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Abhaya+Libre:wght@400;500;600;700;800&family=Courgette&family=Outfit:wght@100..900&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Pinyon+Script&family=Poller+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import "tailwindcss";
+
+*{
+    font-family: "Outfit",sans-serif;
+}
+
+::-webkit-scrollbar{
+    display: none;
+}
+
+@theme {
+    --color-primary :#5044E5
+}
